--- a/mission_planner/include/mission_planner/MainWindow.ui
+++ b/mission_planner/include/mission_planner/MainWindow.ui
@@ -91,7 +91,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QSlider" name="horizontalSlider">
+       <widget class="QSlider" name="progressSlider">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -105,14 +105,14 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="rotateMode">
         <property name="text">
          <string>Rotate</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="moveButton">
+       <widget class="QPushButton" name="moveMode">
         <property name="text">
          <string>Move</string>
         </property>
@@ -161,12 +161,12 @@
   </action>
   <action name="actionUndo">
    <property name="text">
-    <string>Undo</string>
+    <string>&amp;Undo</string>
    </property>
   </action>
   <action name="actionRedo">
    <property name="text">
-    <string>Redo</string>
+    <string>&amp;Redo</string>
    </property>
   </action>
  </widget>
