Update UI layout and allow reporting of artifacts via interface_protocol

--- a/mission_planner/include/mission_planner/MainWindow.ui
+++ b/mission_planner/include/mission_planner/MainWindow.ui
@@ -446,7 +446,7 @@ color: rgb(238, 238, 236);</string>
             </widget>
            </item>
            <item row="5" column="0">
-            <widget class="QPushButton" name="reportArifactBtn">
+            <widget class="QPushButton" name="reportArtifactBtn">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(241, 62, 190);</string>
              </property>
