--- a/mission_planner/include/mission_planner/MainWindow.ui
+++ b/mission_planner/include/mission_planner/MainWindow.ui
@@ -176,16 +176,21 @@ QLabel{border:1px solid black;};
              <property name="alignment">
               <set>Qt::AlignCenter</set>
              </property>
-             <widget class="QWidget" name="verticalLayoutWidget_2">
+             <widget class="QTextEdit" name="artifactTextEdit">
               <property name="geometry">
                <rect>
-                <x>-1</x>
+                <x>3</x>
                 <y>19</y>
-                <width>281</width>
-                <height>261</height>
+                <width>361</width>
+                <height>191</height>
                </rect>
               </property>
-              <layout class="QVBoxLayout" name="verticalLayout"/>
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
              </widget>
             </widget>
            </item>
@@ -202,8 +207,8 @@ QLabel{border:1px solid black;};
                <rect>
                 <x>0</x>
                 <y>20</y>
-                <width>281</width>
-                <height>261</height>
+                <width>361</width>
+                <height>191</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_3"/>
@@ -373,7 +378,7 @@ QLabel{border:1px solid black;};
           </layout>
          </widget>
          <widget class="QWidget" name="formLayoutWidget">
-          <layout class="QGridLayout" name="gridLayoutMovement" rowstretch="0,0,0,0,0,0" columnstretch="0,0,0,0,0">
+          <layout class="QGridLayout" name="gridLayoutMovement" rowstretch="0,0,0,0,0,0,0" columnstretch="0,0,0,0,0">
            <property name="spacing">
             <number>3</number>
            </property>
@@ -391,7 +396,7 @@ QLabel{border:1px solid black;};
              </item>
             </layout>
            </item>
-           <item row="1" column="2" colspan="3">
+           <item row="2" column="2" colspan="3">
             <widget class="QPushButton" name="eStopAllBtn">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(164, 0, 0);
@@ -402,7 +407,7 @@ color: rgb(238, 238, 236);</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0" colspan="2">
+           <item row="2" column="0" colspan="2">
             <widget class="QPushButton" name="startAllBtn">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(78, 154, 6);
@@ -413,7 +418,7 @@ color: rgb(238, 238, 236);</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="1">
+           <item row="6" column="1">
             <widget class="QComboBox" name="comboBoxArtifactType">
              <property name="maxCount">
               <number>6</number>
@@ -445,7 +450,7 @@ color: rgb(238, 238, 236);</string>
              </item>
             </widget>
            </item>
-           <item row="5" column="0">
+           <item row="6" column="0">
             <widget class="QPushButton" name="reportArtifactBtn">
              <property name="styleSheet">
               <string notr="true">background-color: rgb(241, 62, 190);</string>
@@ -455,7 +460,7 @@ color: rgb(238, 238, 236);</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="2">
+           <item row="6" column="2">
             <layout class="QFormLayout" name="formLayoutArtifactX">
              <item row="0" column="0">
               <widget class="QLabel" name="xLabelDisplay_2">
@@ -497,7 +502,7 @@ color: rgb(238, 238, 236);</string>
              </item>
             </layout>
            </item>
-           <item row="5" column="3">
+           <item row="6" column="3">
             <layout class="QFormLayout" name="formLayoutArtifactY">
              <item row="0" column="0">
               <widget class="QLabel" name="yLabelDisplay_2">
@@ -511,7 +516,7 @@ color: rgb(238, 238, 236);</string>
              </item>
             </layout>
            </item>
-           <item row="5" column="4">
+           <item row="6" column="4">
             <layout class="QFormLayout" name="formLayoutArtifactZ">
              <item row="0" column="0">
               <widget class="QLabel" name="zLabelDisplay_2">
@@ -562,6 +567,16 @@ color: rgb(238, 238, 236);</string>
                <string>robot_5</string>
               </property>
              </item>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QPushButton" name="loraDropBtn">
+             <property name="styleSheet">
+              <string notr="true">background-color: rgb(237, 212, 0)</string>
+             </property>
+             <property name="text">
+              <string>Drop LORA</string>
+             </property>
             </widget>
            </item>
           </layout>
