--- a/mission_planner/include/mission_planner/MainWindow.ui
+++ b/mission_planner/include/mission_planner/MainWindow.ui
@@ -33,8 +33,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>1350</width>
-         <height>878</height>
+         <width>1336</width>
+         <height>929</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_47">
@@ -140,7 +140,7 @@
                         <rect>
                          <x>0</x>
                          <y>0</y>
-                         <width>600</width>
+                         <width>593</width>
                          <height>68</height>
                         </rect>
                        </property>
@@ -218,6 +218,61 @@
                   </widget>
                  </item>
                  <item>
+                  <widget class="QFrame" name="StartStopFrame">
+                   <property name="styleSheet">
+                    <string notr="true">#StartStopFrame {
+	border: 0px;
+}</string>
+                   </property>
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
+                   </property>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
+                   </property>
+                   <layout class="QHBoxLayout" name="horizontalLayout_12">
+                    <item>
+                     <widget class="QPushButton" name="startBtnClicked">
+                      <property name="minimumSize">
+                       <size>
+                        <width>100</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>100</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                      <property name="text">
+                       <string>Start</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QPushButton" name="stopBtnClicked">
+                      <property name="minimumSize">
+                       <size>
+                        <width>100</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>100</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                      <property name="text">
+                       <string>Stop</string>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                 <item>
                   <widget class="QFrame" name="CommandFrame">
                    <property name="styleSheet">
                     <string notr="true">#CommandFrame {
@@ -274,26 +329,7 @@
                              </size>
                             </property>
                             <property name="text">
-                             <string>Start</string>
-                            </property>
-                           </widget>
-                          </item>
-                          <item>
-                           <widget class="QPushButton" name="pushButton_3">
-                            <property name="minimumSize">
-                             <size>
-                              <width>100</width>
-                              <height>40</height>
-                             </size>
-                            </property>
-                            <property name="maximumSize">
-                             <size>
-                              <width>100</width>
-                              <height>40</height>
-                             </size>
-                            </property>
-                            <property name="text">
-                             <string>Stop</string>
+                             <string>Move</string>
                             </property>
                            </widget>
                           </item>
@@ -533,7 +569,7 @@
                          </property>
                          <layout class="QHBoxLayout" name="horizontalLayout_4">
                           <item>
-                           <widget class="QPushButton" name="pushButton_4">
+                           <widget class="QPushButton" name="loraDropBtnClicked">
                             <property name="minimumSize">
                              <size>
                               <width>0</width>
@@ -1070,7 +1106,7 @@
                    </property>
                    <layout class="QHBoxLayout" name="horizontalLayout_42">
                     <item>
-                     <widget class="QPushButton" name="pushButton_6">
+                     <widget class="QPushButton" name="startAllBtnClicked">
                       <property name="minimumSize">
                        <size>
                         <width>100</width>
@@ -1089,7 +1125,7 @@
                      </widget>
                     </item>
                     <item>
-                     <widget class="QPushButton" name="pushButton_7">
+                     <widget class="QPushButton" name="stopAllBtnClicked">
                       <property name="minimumSize">
                        <size>
                         <width>100</width>
@@ -1148,13 +1184,17 @@
                      <rect>
                       <x>0</x>
                       <y>0</y>
-                      <width>618</width>
-                      <height>232</height>
+                      <width>611</width>
+                      <height>258</height>
                      </rect>
                     </property>
                     <layout class="QVBoxLayout" name="verticalLayout_7">
                      <item>
-                      <widget class="QTextEdit" name="textEdit"/>
+                      <widget class="QTextEdit" name="textEdit">
+                       <property name="enabled">
+                        <bool>false</bool>
+                       </property>
+                      </widget>
                      </item>
                     </layout>
                    </widget>
@@ -1192,13 +1232,17 @@
                      <rect>
                       <x>0</x>
                       <y>0</y>
-                      <width>618</width>
-                      <height>232</height>
+                      <width>611</width>
+                      <height>257</height>
                      </rect>
                     </property>
                     <layout class="QHBoxLayout" name="horizontalLayout_44">
                      <item>
-                      <widget class="QPlainTextEdit" name="plainTextEdit"/>
+                      <widget class="QPlainTextEdit" name="plainTextEdit">
+                       <property name="enabled">
+                        <bool>false</bool>
+                       </property>
+                      </widget>
                      </item>
                     </layout>
                    </widget>
